# hrassis

./: .gitignore  .local.env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  worker.Dockerfile  x.json
app/config/: __init__.py  db_config.py  env_config.py
app/controllers/: assesments_controllers.py  chat_controllers.py  jd_controllers.py  mail_controllers.py  resume_controllers.py  user_controllers.py
app/helpers/: __init__.py  ai_helper.py  auth_helper.py  gen_email_temp.py  generate_pass.py  mail_helper.py  resume_helper.py
app/middlewares/: __init__.py  auth_middleware.py
app/models/: __init__.py  assessment_model.py  conversations_model.py  jd_model.py  order_model.py  resume_model.py  task_model.py  user_model.py
app/repository/: assessment_repository.py  chat_repository.py  conversations_repository.py  jd_repository.py  order_repository.py  resume_repository.py  task_repository.py  user_repository.py
app/routers/: __init__.py  assesments_routers.py  candidate_routers.py  chat_routers.py  jd_routers.py  mail_routers.py  user_routers.py
app/services/: assessment_services.py  db_services.py  jd_services.py  mail_services.py  payment.py  resume_services.py  user_services.py
app/services/assesments/: context_retriever.py  generate_questions.py
app/services/chatbot/: assessment_node.py  chat_interface.py  chatbot.py  db_node.py  (+4 more)
app/tasks/: assessment_tasks.py  celery_app.py  jd_tasks.py  resume_tasks.py
app/utils/: email.py  http_responses.py  mail_utils.py  temp_folder.py
app/validators/: ask_validator.py  user_validator.py
(+12 files in other folders)
